--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="tab_text1">DEBT &amp; LOAN</string>
     <string name="tab_text2">EXPENSE</string>
     <string name="tab_text3">INCOME</string>
+    <string name="transaction_details">Transaction Details</string>
+    <string name="additional_data">Additional data</string>
+    <string name="popup">popup</string>
 </resources>
