--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,16 @@
     <string name="transaction_details">Transaction Details</string>
     <string name="additional_data">Additional data</string>
     <string name="popup">popup</string>
+    <string name="title_activity_repeating">RepeatingActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="notifications">Notifications</string>
+    <string name="notify_on">Notify ON</string>
+    <string name="notify_off">Notify OFF</string>
 </resources>
